Fix styling of GamePrediction components so they do not overflow when opened

--- a/nhl-game-predictor-frontend/src/styles/game-predictions.css
+++ b/nhl-game-predictor-frontend/src/styles/game-predictions.css
@@ -80,12 +80,14 @@
   overflow-wrap: break-word;
   white-space: normal;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 .open {
   flex-direction: column;
   align-items: center;
   border: 7px solid #ee983a;
+  box-sizing: border-box;
 }
 
 .open .game-prediction-stats {
